force-app/main/default/objects/Revenue_Contract__c/Revenue_Contract__c.object-meta.xml
<CustomObject>
    <description>This object captures the revenue Contract.</description>
    <label>Revenue Contract / Statement of Work</label>
    <nameField>
        <displayFormat>RC/SOW - {0000}</displayFormat>
        <label>Revenue Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>