force-app/main/default/objects/Revenue_Contract__c/fields/Batch_Process_Execution__c.field-meta.xml
<CustomField>
    <fullName>Batch_Process_Execution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Process Execution</label>
    <type>Checkbox</type>
</CustomField>