force-app/main/default/objects/Revenue_Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field denotes the parent Contract</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Revenue_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>