force-app/main/default/objects/Revenue_Contract__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>This field denotes the Contract End Date</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>