force-app/main/default/objects/Revenue_Contract__c/fields/Contract_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Months__c</fullName>
    <description>This field represents the Contract month</description>
    <formula>IF( YEAR( Contract_End_Date__c ) == YEAR( Live_Renewed_Date__c )  , 
     MONTH(Contract_End_Date__c) -  MONTH(Live_Renewed_Date__c) +1, 
     (13- MONTH(Live_Renewed_Date__c) + 
      MONTH(Contract_End_Date__c) + 
      ((YEAR( Contract_End_Date__c )-YEAR( Live_Renewed_Date__c )-1)*12)
      )
    )</formula>
    <label>Contract Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>