force-app/main/default/objects/Revenue_Contract__c/fields/Contract_Quarters__c.field-meta.xml
<CustomField>
    <fullName>Contract_Quarters__c</fullName>
    <description>This field denotes the Contract Quarters</description>
    <formula>CEILING(Contract_Months__c/3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Quarters</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>