force-app/main/default/objects/Revenue_Contract__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>This field denotes the Start Date.</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>