force-app/main/default/objects/Revenue_Contract__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field denotes the related Customer.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue Contracts</relationshipLabel>
    <relationshipName>Revenue_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>