force-app/main/default/objects/Revenue_Contract__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>This field denotes the Invoice Date.</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>