force-app/main/default/objects/Revenue_Contract__c/fields/Live_Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Renewed_Date__c</fullName>
    <description>This field denotes the Live/Renewed Date.</description>
    <label>Live/Renewed Date</label>
    <type>Date</type>
</CustomField>