force-app/main/default/objects/Revenue_Contract__c/fields/Payment_Term_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_After_Days__c</fullName>
    <description>This field denotes the Payment Term (After # Days).</description>
    <label>Payment Term (After # Days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Term_After_Days</valueSetName>
    </valueSet>
</CustomField>