force-app/main/default/objects/Revenue_Contract__c/fields/Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Account__c</fullName>
    <description>This field denotes the parent Revenue Account.</description>
    <label>Revenue Account</label>
    <referenceTo>Revenue_Account__c</referenceTo>
    <relationshipLabel>Revenue Contract / Statement of Work</relationshipLabel>
    <relationshipName>Revenue_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>