force-app/main/default/objects/Revenue_Contract__c/fields/Total_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Revenue__c</fullName>
    <description>This field represents the Total Monthly Revenue</description>
    <label>Total Monthly Revenue</label>
    <summarizedField>Contract_Line_Items__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Contract_Line_Items__c.Revenue_Contract_Details__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>