force-app/main/default/objects/Revenue_Contract__c/fields/Total_SOW_Line_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_SOW_Line_Item_Amount__c</fullName>
    <label>Total SOW Line Item Amount</label>
    <summarizedField>SOW_Line_Item__c.Line_Item_Amount__c</summarizedField>
    <summaryForeignKey>SOW_Line_Item__c.Revenue_Contract_Statement_of_Work__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>