force-app/main/default/objects/Revenue_Contract__c/recordTypes/Non_Recurring.recordType-meta.xml
<RecordType>
    <fullName>Non_Recurring</fullName>
    <active>true</active>
    <description>Non-Recurring/One Time Revenue Contract.</description>
    <label>Non - Recurring</label>
</RecordType>