force-app/main/default/objects/Revenue_Contract__c/recordTypes/Recurring.recordType-meta.xml
<RecordType>
    <fullName>Recurring</fullName>
    <active>true</active>
    <description>Recurring Revenue Contract.</description>
    <label>Recurring</label>
</RecordType>