force-app/main/default/objects/Revenue_Contract__c/recordTypes/Statement_of_Work.recordType-meta.xml
<RecordType>
    <fullName>Statement_of_Work</fullName>
    <active>true</active>
    <description>This record type represents the Statement of Work record type.</description>
    <label>Statement of Work</label>
</RecordType>