force-app/main/default/objects/Revenue_Contract__c/validationRules/Validate_Invoice_Date_is_after_Live_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Invoice_Date_is_after_Live_Date</fullName>
    <active>true</active>
    <description>This VR ensures that Invoice Date is not less than Live date</description>
    <errorConditionFormula>Invoice_Date__c &lt; Live_Renewed_Date__c</errorConditionFormula>
    <errorMessage>Invoice date cannot be before Live date.</errorMessage>
</ValidationRule>